Create new file pbandj.html and create a link in index.html

--- a/recipes/pbandj.html
+++ b/recipes/pbandj.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/pbandj.html">Peanut Butter and Jelly Sandwich</a>
+    <h1>Peanut Butter and Jelly Sandwich</h1>
+    
 </body>
 </html>
