Add ingredients and steps to pbandj.html

--- a/recipes/pbandj.html
+++ b/recipes/pbandj.html
@@ -6,7 +6,26 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Peanut Butter and Jelly Sandwich</h1>
-    
+    <h1>Peanut Butter and Jelly</h1>
+    <img src="https://shorturl.at/zETV3"
+    width="400"
+    height="300
+    " alt="image of a pbandj">
+    <h3>Peanut butter and jelly, a timeless classic, easy to make. You only need three ingredients!</h3>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Bread</li>
+        <li>Peanut Butter</li>
+        <li>Jelly</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Get two pieces of bread</li>
+        <li>Spread peanut butter on one slice</li>
+        <li>Spread jelly on one slice</li>
+        <li>Put the pieces together</li>
+    </ol>
+
 </body>
 </html>
