Create new html.files cupnoodle.html and fruistsalad.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/pbandj.html">Peanut Butter and Jelly Sandwich</a>
+    <a href="recipes/pbandj.html">Peanut Butter and Jelly</a>
+    <a href="recipes/fruitsalad.html">Fruit Salad</a>
+    <a href="recipes/cupnoodle.html">Cup Noodles</a>
 </body>
 </html>
