--- a/recipes/pbandj.html
+++ b/recipes/pbandj.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Peanut Butter and Jelly</title>
 </head>
 <body>
     <h1>Peanut Butter and Jelly</h1>
     <img src="https://shorturl.at/zETV3"
-    width="400"
-    height="300
-    " alt="image of a pbandj">
+        width="400"
+        height="300" 
+        alt="image of a pbandj">
     <h3>Peanut butter and jelly, a timeless classic, easy to make. You only need three ingredients!</h3>
     <h2>Ingredients</h2>
     <ul>
