Edit Odin Recipes html and css

--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/pbandj.html">Peanut Butter and Jelly</a>
-    <a href="recipes/fruitsalad.html">Fruit Salad</a>
-    <a href="recipes/cupnoodle.html">Cup Noodles</a>
+    <ul>
+    <li><a href="recipes/pbandj.html">Peanut Butter and Jelly</a> <br>
+        <img src="https://shorturl.at/zETV3"
+        height="150"
+        width="150">
+    </li>
+    <li><a href="recipes/fruitsalad.html">Fruit Salad</a> <br>
+        <img src="https://shorturl.at/mtuBP"
+        height="150"
+        width="150">
+    </li>
+    <li><a href="recipes/cupnoodle.html">Cup Noodles</a> <br>
+        <img src="https://shorturl.at/kmuA1"
+        height="150"
+        width="150">
+    </li>
+    </ul>
 </body>
 </html>
